# raymarch-algo-compare

./: .gitignore  FINDINGS.md  FULL_PLAN.md  GOALS.md  PLAN.md  README.md  RESEARCH_REVIEW.md  SWEEP_PLAN.md  embed_renders.py  findings_presentation.html  generate_presentation.py  gpu_confirm.py  overnight-run-plan.txt  pyproject.toml  requirements.txt  run_overnight_sweep.bat  summary.json
example/: REPORT.md  matrix_gpu_frame_ms_median.csv  matrix_gpu_time_per_ray_median_us.csv  matrix_gpu_time_per_ray_us.csv  matrix_gpu_time_sample_count.csv  matrix_gpu_warp_divergence_proxy.csv  matrix_hit_rate.csv  matrix_iteration_mean.csv  matrix_time_per_ray_us.csv  matrix_warp_divergence_proxy.csv  tables.txt
example/Bad_Lipschitz_Sphere__AR-ST__2026-02-10T00-50-41/: stats.json
example/Bad_Lipschitz_Sphere__Curvature-Aware_Tracing__2026-02-10T00-50-45/: stats.json
example/Bad_Lipschitz_Sphere__Enhanced__2026-02-10T00-50-44/: stats.json
example/Bad_Lipschitz_Sphere__Hybrid__2026-02-10T00-50-48/: stats.json
example/Bad_Lipschitz_Sphere__Overstep-Bisect__2026-02-10T00-50-47/: stats.json
example/Bad_Lipschitz_Sphere__Relaxed(ω=1.2)__2026-02-10T00-50-40/: stats.json
example/Bad_Lipschitz_Sphere__Segment__2026-02-10T00-50-49/: stats.json
example/Bad_Lipschitz_Sphere__Slope-AR(β=0.3)__2026-02-10T00-50-43/: stats.json
raymarching_benchmark/: config.py  main.py  param_grid.py  sweep.py  viewpoints.py
raymarching_benchmark/core/: __init__.py  camera.py  (+3 more)
tests/: test_interval.py  test_report_generation.py  test_reports_gpu_columns.py  test_scene_parity.py  test_smoke.py
(+168 files in other folders)
