[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raymarching-benchmark"
version = "0.0.0"
description = "Ray marching algorithm analytical testing (MVP)"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
]

[project.optional-dependencies]
dev = ["pytest", "flake8"]

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "tests/*.py"
addopts = "-q"

# Prevent setuptools from accidentally treating runtime output directories as
# importable packages during editable/local builds.
[tool.setuptools.packages.find]
exclude = ["results*", "tests*"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
